<resources>
    <!-- Global -->
    <string name="app_name">Electron</string>
    <string name="ok">OK</string>

    <!-- MainActivity -->
    <string name="action_enter_email">Enter Email</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>

    <!-- WelcomeActivity -->
    <string name="activity_welcome_hint">Volunteer Email</string>
    <string name="activity_welcome_save">Save</string>
    <string name="activity_welcome_bad_id">Invalid volunteer email.</string>
    <string name="activity_welcome_perms_error">Electron requires the Camera permission.</string>

    <!-- PreferencesActivity -->
    <string name="activity_settings_title">Settings</string>

    <!-- VerificationDialog -->
    <string name="dialog_verify_title">Verify Information</string>
    <string name="dialog_verify_no_issues">No issues detected.</string>
    <string name="dialog_verify_error">Error</string>
    <string name="dialog_verify_error_connection">
        Unable to connect to Nucleus.\n\nEnsure that your device is connected to the Internet.
    </string>
    <string name="dialog_verify_underage">Attendee is underage.</string>
    <string name="dialog_verify_no_waiver">Attendee has not signed waiver.</string>
    <string name="dialog_verify_checked_in">Attendee is already checked in.</string>
    <string name="dialog_verify_not_confirmed">Attendee has not confirmed.</string>
    <string name="dialog_verify_multiple_issues">Multiple issues encountered.</string>
    <string name="dialog_verify_full_name">Full Name</string>
    <string name="dialog_verify_school">School</string>
    <string name="dialog_verify_email">Email Address</string>
    <string name="dialog_verify_age">Age</string>
    <string name="dialog_verify_waiver_status">Waiver Status</string>
    <string name="dialog_verify_waiver_status_true">Signed</string>
    <string name="dialog_verify_waiver_status_false">Not Signed</string>
    <string name="dialog_verify_check_in_status">Check In Status</string>
    <string name="dialog_verify_check_in_status_true">Checked In</string>
    <string name="dialog_verify_check_in_status_false">Not Checked In</string>
    <string name="dialog_verify_confirmed_status">Confirmation Status</string>
    <string name="dialog_verify_confirmed_status_true">Confirmed</string>
    <string name="dialog_verify_confirmed_status_false">Not Confirmed</string>
    <string name="dialog_verify_check_in">Check-In</string>
    <string name="dialog_verify_dismiss">Dismiss</string>
    <string name="dialog_verify_snackbar_checked_in">Checked in %1$s.</string>
    <string name="dialog_verify_snackbar_failed">Check in failed.</string>
    <string name="dialog_verify_snackbar_dismissed">Did not check in %1$s.</string>

    <!-- Email Dialog -->
    <string name="dialog_email_hint">Email Address</string>
    <string name="dialog_email_submit">Submit</string>
    <string name="dialog_email_cancel">Cancel</string>

    <!-- Help Dialog -->
    <string name="dialog_help_volunteer_title">VOLUNTEER ID</string>
    <string name="dialog_help_volunteer_text">
        Your volunteer ID allows Electron to tie check-ins to you.
        Talk to an organizer if you\'ve forgotten your ID.
    </string>
    <string name="dialog_help_scan_title">SCANNING</string>
    <string name="dialog_help_scan_text">
        To scan a QR code, just point your device\'s camera at the code.
        Electron will detect it and scan automatically.
    </string>
    <string name="dialog_help_verify_title">VERIFY</string>
    <string name="dialog_help_verify_text">
        Electron automatically verifies attendee information. Make sure to check the attendee\'s ID.
        In the event of an issue, follow directions from an organizer.
    </string>
    <string name="dialog_help_code_title">NO CODE?</string>
    <string name="dialog_help_code_text">
        If a QR code is unavailable or unable to be scanned, use the \"Enter Email\" option
        to manually enter the attendee\'s email.
    </string>
    <string name="dialog_help_help_title">NEED HELP?</string>
    <string name="dialog_help_help_text">Get in touch with an organizer in the event of any issues.</string>

    <!-- BarcodeDetector Error Dialog -->
    <string name="dialog_detector_error_title">Unable to start BarcodeDetector.</string>
    <string name="dialog_detector_error_text">Ensure that this device has Google Play Services installed and has adequate free space for the Vision API.</string>

    <!-- BarcodeDetector Error Dialog -->
    <string name="dialog_camera_error_title">Camera Error</string>
    <string name="dialog_camera_error_text">Unable to connect to camera. Try relaunching Electron or rebooting the device.</string>

    <!-- Permissions Denied Dialog -->
    <string name="dialog_perms_title">Permissions Required</string>
    <string name="dialog_perms_text">Electron requires one or more permissions to properly operate. Please enable these permissions.</string>

    <!-- PreferencesFragment -->
    <string name="fragment_preferences_account">Account</string>
    <string name="fragment_preferences_logout">Logout</string>
    <string name="fragment_preferences_volunteer_id">Volunteer email: %1$s</string>
    <string name="fragment_preferences_about">About</string>
    <string name="fragment_preferences_about_version">Version %1$s</string>
    <string name="fragment_preferences_licenses">Open Source Licenses</string>

    <!-- SharedPreferences Keys -->
    <string name="prefs_account_logout">accountLogout</string>
    <string name="prefs_about">about</string>
    <string name="prefs_licenses">licenses</string>
    <string name="prefs_first_launch">firstLaunch</string>
    <string name="prefs_volunteer_email">volunteerEmail</string>

</resources>
